--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-      <h1>hello</h1>
+      <header>
+        <h1>A Portfolio by Mikito Saarna</h1>
+      </header>
+      <nav>
+      </nav>
+      <main>
+      </main>
+      <footer>
+      </footer>
       <script src="script.js"></style>
     </body>
   </html>
-        
