--- a/index.html
+++ b/index.html
@@ -11,9 +11,45 @@
       <header>
         <h1>A Portfolio by Mikito Saarna</h1>
       </header>
+      <!-- I know navigation bar wasn't a requirement but wanted to add it anyway (the pages themselves are sparse) -->
       <nav>
+        <a href="home.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact Me</a>
       </nav>
       <main>
+        <p>My name is Mikito Saarna, and I am an aspiring software engineer with a diverse background. By reading this portfolio, I hope to impart on you a glimmer of the inspiration that makes up my daily life<p>
+          <img src="#" alt="A portrait of myself.">
+          <section>
+            <h3>The Journey Begins</h3>
+            <p>I grew up in Kansas City for most of my life, but shortly after graduating from high school, I departed my parents' house to attend a Gap-year program called <a href="https://www.generationpeaceacademy.org/">Generation Peace Academy</a> (GPA). This was a very moumental and precious time of my life where I explored different topics such as my own character, spirituality, relationships, my dreams and aspirations and much more. I ended up extending my time in GPA to a total of 3 years</p>
+            <p>About a year after graduating from GPA, I went on a bike-packing trip from New Jersey to Detroit (I also road through a small portion of Canada). This trip taught me that I can accomplish anything I set my heart and mind to.</p>
+            <img src="#" alt="my sick 'ride' on my 2 week long bike-packing trip">
+            <p>I moved to Las Vegas a month after my bike-packing trip and have been living here ever since. I worked with various E-commerce start-ups until I decided to have my career change and study software engineering with Thinkful. During this time I also met and married my wife Misato.<p>
+            <img src="#" alt="a picture of my wife and I">
+          </section>
+          <section>
+            <h3>Explored & Exploring</h3>
+            <p>Don't let the heading of this section fool you - this isn't a recollection of the Himalayan Mountains I've traversed, the get-away trains I have illegally boarded, or the jungles of the Amazon I narrowly escaped death fighting a jaguar... because I have done none of those things. Rather, this will be a list of topics or interests I have explored or currently exploring, and perhaps you may be interested in some of them.<p>
+              <ul>
+                <li>Software engineering (obviously)</li>
+                <li>Reading non-fiction</li>
+                <li>Cooking</li>
+                <li>Soccer and volleyball</li>
+                <li>Brewing speciality pour-over coffee</li>
+                <li>Traveling and exploring new areas and cultures</li>
+              </ul>
+              <hr>
+        </section>
+        <article>
+          <h2>Learn more about me<h2>
+            <p>I hope you loved what you read, and if you're interested to find out more about me, check out my other projects here:<p>
+              <ol>
+                <li><a href="#" target="_blank">LinkedIn</a></li>
+                <li><a href="#" target="_blank">GitHub</a></li>
+                <li>Check out <a href="#" target="_blank">YUBIWA</a>!</li>
+                <li>Send me an email</li>
       </main>
       <footer>
       </footer>
