--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 <li><a href="#" target="_blank">LinkedIn</a></li>
                 <li><a href="#" target="_blank">GitHub</a></li>
                 <li>Check out <a href="#" target="_blank">YUBIWA</a>!</li>
-                <li>Send me an email</li>
+                <li>Send me an <a href="mailto:mikitosaarna@gmail.com">email</a></li>
+                <li>You can also call me at: <a href="tel:720-295-7484">720-295-7484</a></li>
+              </ol>
       </main>
       <footer>
       </footer>
