--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
       <header>
         <h1>A Portfolio by Mikito Saarna</h1>
-      </header>
+      <!-- </header> -->
       <!-- I know navigation bar wasn't a requirement but wanted to add it anyway (the pages themselves are sparse) -->
       <nav>
         <a href="home.html">Home</a>
@@ -18,12 +18,14 @@
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact Me</a>
       </nav>
+      </header>
       <main>
         <p>My name is Mikito Saarna, and I am an aspiring software engineer with a diverse background. By reading this portfolio, I hope to impart on you a glimmer of the inspiration that makes up my daily life<p>
           <img src="#" alt="A portrait of myself.">
           <section>
             <h3>The Journey Begins</h3>
             <p>I grew up in Kansas City for most of my life, but shortly after graduating from high school, I departed my parents' house to attend a Gap-year program called <a href="https://www.generationpeaceacademy.org/">Generation Peace Academy</a> (GPA). This was a very moumental and precious time of my life where I explored different topics such as my own character, spirituality, relationships, my dreams and aspirations and much more. I ended up extending my time in GPA to a total of 3 years</p>
+            <hr>
             <p>About a year after graduating from GPA, I went on a bike-packing trip from New Jersey to Detroit (I also road through a small portion of Canada). This trip taught me that I can accomplish anything I set my heart and mind to.</p>
             <img src="#" alt="my sick 'ride' on my 2 week long bike-packing trip">
             <p>I moved to Las Vegas a month after my bike-packing trip and have been living here ever since. I worked with various E-commerce start-ups until I decided to have my career change and study software engineering with Thinkful. During this time I also met and married my wife Misato.<p>
@@ -52,8 +54,12 @@
                 <li>Send me an <a href="mailto:mikitosaarna@gmail.com">email</a>!</li>
                 <li>You can also call me at: <a href="tel:720-295-7484">720-295-7484</a></li>
               </ol>
+              <hr>
+        <article>
+          <a href="https://www.google.com/search?sxsrf=ALeKk031kl-PnVDKlDHSYL7TWQg7u8KOJg:1627079902143&q=746+oakmont+ave+las+vegas,+nv&spell=1&sa=X&ved=2ahUKEwjD89n8oPrxAhUFbs0KHbTmBJQQBSgAegQIARAw&biw=1440&bih=764#" target="_blank"><img src="https://www.google.com/maps/vt/data=EQcNaI8-zxBWxGTklS5mL4-gs_nRuI0MNe18VIeNVuTrACW9TJz0VgzaMEGqkQ60iIfbRY6-ndk5qPOGkrwvXKPXTwJddPFsvrwxfhbEm2DHiljVNWpTPuPvy92GjL40tQxU-XC0xIEU3sdncB7dtXqQXFQ2wKqawpCuboQs2v8EZAe4cppLJM36LhwsLUa5ZJ9sF0jHc7l9PFAnPLFYggJK5NfT93DhQnnnhbja__9q8sd8jQmt_1W30jSlgn29UkJ20OVRJhtmtOl75MZ9x2tK167AqWoFbVj_WuMP" alt="google maps location of my address"</a>
       </main>
       <footer>
+        <p>Thank you for visiting my portfolio!</p>
       </footer>
       <script src="script.js"></style>
     </body>
