--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           <h2>Learn more about me<h2>
             <p>I hope you loved what you read, and if you're interested to find out more about me, check out my other projects here:<p>
               <ol>
-                <li><a href="#" target="_blank">LinkedIn</a></li>
-                <li><a href="#" target="_blank">GitHub</a></li>
-                <li>Check out <a href="#" target="_blank">YUBIWA</a>!</li>
+                <li><a href="https://www.linkedin.com/in/mikito-saarna-126725213/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/miki-saarna" target="_blank">GitHub</a></li>
+                <li>Check out <a href="https://yubiwarings.com/" target="_blank">YUBIWA</a>!</li>
                 <li>Send me an <a href="mailto:mikitosaarna@gmail.com">email</a>!</li>
                 <li>You can also call me at: <a href="tel:720-295-7484">720-295-7484</a></li>
               </ol>
