--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <li>Send me an <a href="mailto:mikitosaarna@gmail.com">email</a>!</li>
                 <li>You can also call me at: <a href="tel:xxx-xxx-xxxx">xxx-xxx-xxxx</a></li>
               </ol>
+            </artcile>
               <!-- had extreme difficulty using style elements on the following <article> element. Perhaps because it's Google's link? -->
         <article>
           <a href="https://www.google.com/search?sxsrf=ALeKk031kl-PnVDKlDHSYL7TWQg7u8KOJg:1627079902143&q=746+oakmont+ave+las+vegas,+nv&spell=1&sa=X&ved=2ahUKEwjD89n8oPrxAhUFbs0KHbTmBJQQBSgAegQIARAw&biw=1440&bih=764#" target="_blank"><img src="https://www.google.com/maps/vt/data=EQcNaI8-zxBWxGTklS5mL4-gs_nRuI0MNe18VIeNVuTrACW9TJz0VgzaMEGqkQ60iIfbRY6-ndk5qPOGkrwvXKPXTwJddPFsvrwxfhbEm2DHiljVNWpTPuPvy92GjL40tQxU-XC0xIEU3sdncB7dtXqQXFQ2wKqawpCuboQs2v8EZAe4cppLJM36LhwsLUa5ZJ9sF0jHc7l9PFAnPLFYggJK5NfT93DhQnnnhbja__9q8sd8jQmt_1W30jSlgn29UkJ20OVRJhtmtOl75MZ9x2tK167AqWoFbVj_WuMP" alt="google maps location of my address"></a>
@@ -77,6 +78,6 @@
         <p>Thank you for visiting my portfolio</p>
         <p>Mikito Saarna, 2021</p>
       </footer>
-      <script src="script.js"></style>
+      <script src="script.js"></script>
     </body>
   </html>
