Updates to pass

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="en"> // added language since this caused error within WAVE Web Accessibility Eval tool
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
@@ -19,8 +19,8 @@
         <a href="#contact-me">Contact Me</a>
       </nav>
       </header>
-      <!-- entering the content of the page -->
-      <main> <!-- unclear on why <strong> and <b> are not working within my HTML -->
+      <!-- all the content of the page here -->
+      <main> <!-- unclear on why <strong> and <b> are not displaying properly within my HTML -->
         <p>My name is <strong>Mikito Saarna</strong>, and I am an aspiring <strong>software engineer</strong>.<p>
           <img src="images/self-portrait.jpg" alt="A portrait of myself.">
       <!-- about me section -->
@@ -69,8 +69,8 @@
                 <li>You can also call me at: <a href="tel:xxx-xxx-xxxx">xxx-xxx-xxxx</a></li>
               </ol>
             </article>
-              <!-- had extreme difficulty using style elements on the following <article> element. Perhaps because it's Google's link? -->
-        <article>
+              <!-- had extreme difficulty using style elements on the following <article> element. Perhaps because it's Google's link? Something to research more on-->
+        <article >
           <a href="https://www.google.com/search?sxsrf=ALeKk031kl-PnVDKlDHSYL7TWQg7u8KOJg:1627079902143&q=746+oakmont+ave+las+vegas,+nv&spell=1&sa=X&ved=2ahUKEwjD89n8oPrxAhUFbs0KHbTmBJQQBSgAegQIARAw&biw=1440&bih=764#" target="_blank"><img src="https://www.google.com/maps/vt/data=EQcNaI8-zxBWxGTklS5mL4-gs_nRuI0MNe18VIeNVuTrACW9TJz0VgzaMEGqkQ60iIfbRY6-ndk5qPOGkrwvXKPXTwJddPFsvrwxfhbEm2DHiljVNWpTPuPvy92GjL40tQxU-XC0xIEU3sdncB7dtXqQXFQ2wKqawpCuboQs2v8EZAe4cppLJM36LhwsLUa5ZJ9sF0jHc7l9PFAnPLFYggJK5NfT93DhQnnnhbja__9q8sd8jQmt_1W30jSlgn29UkJ20OVRJhtmtOl75MZ9x2tK167AqWoFbVj_WuMP" alt="google maps location of my address"></a>
           </article>
       </main>
