--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en"> // added language since this caused error within WAVE Web Accessibility Eval tool
+  <html lang="en"> <!--added language since this caused error within WAVE Web Accessibility Eval tool-->
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
@@ -70,7 +70,7 @@
               </ol>
             </article>
               <!-- had extreme difficulty using style elements on the following <article> element. Perhaps because it's Google's link? Something to research more on-->
-        <article >
+        <article class="centered-img">
           <a href="https://www.google.com/search?sxsrf=ALeKk031kl-PnVDKlDHSYL7TWQg7u8KOJg:1627079902143&q=746+oakmont+ave+las+vegas,+nv&spell=1&sa=X&ved=2ahUKEwjD89n8oPrxAhUFbs0KHbTmBJQQBSgAegQIARAw&biw=1440&bih=764#" target="_blank"><img src="https://www.google.com/maps/vt/data=EQcNaI8-zxBWxGTklS5mL4-gs_nRuI0MNe18VIeNVuTrACW9TJz0VgzaMEGqkQ60iIfbRY6-ndk5qPOGkrwvXKPXTwJddPFsvrwxfhbEm2DHiljVNWpTPuPvy92GjL40tQxU-XC0xIEU3sdncB7dtXqQXFQ2wKqawpCuboQs2v8EZAe4cppLJM36LhwsLUa5ZJ9sF0jHc7l9PFAnPLFYggJK5NfT93DhQnnnhbja__9q8sd8jQmt_1W30jSlgn29UkJ20OVRJhtmtOl75MZ9x2tK167AqWoFbVj_WuMP" alt="google maps location of my address"></a>
           </article>
       </main>
